2012-01-20  Tristan Gingold  <gingold@adacore.com>

	* od-macho.c (OPT_SEG_SPLIT_INFO): New macro.
	(options): Add an entry for seg_split_info.
	(mach_o_help): Document it.
	(dump_segment_split_info): New function.
	(dump_load_command): Handle seg_split_info.

2012-01-19  Tristan Gingold  <gingold@adacore.com>

	* dwarf.c (process_extended_line_op): Add a cast to silent a
	warning.

2012-01-19  Tristan Gingold  <gingold@adacore.com>

	* dwarf.c (process_extended_line_op): Reindent define_file output.
	Detect define_file opcode length mismatch.
	(display_debug_lines_decoded): Add an entry in file_table for each
	define_file opcode.
	Ignore DW_LNE_set_discriminator and DW_LNE_HP_set_sequence.
	Display extended opcode for unhandle opcode.

2012-01-17  Alan Modra  <amodra@gmail.com>

	* version.c (print_version): Update copyright message year.

2012-01-16  Alan Modra  <amodra@gmail.com>

	PR binutils/13593
	* nm.c (OPTION_SIZE_SORT): Define.
	(long_options): Don't set no_sort, sort_numerically or
	sort_by_size directly.
	(main): Instead set the flags here, making them mutually exclusive.

2012-01-10  Tristan Gingold  <gingold@adacore.com>

	* objdump.c (display_object_bfd): Renamed from ...
	(display_bfd): ... this.
	(display_any_bfd): New function.
	(display_file): Split.  Handle nested archives.

2012-01-09  Roland McGrath  <mcgrathr@google.com>

	* configure.in: Use AM_ZLIB.
	* configure: Regenerated.

2012-01-06  Nick Clifton  <nickc@redhat.com>

	* po/ru.po: Updated Russian translation.

2012-01-04  Tristan Gingold  <gingold@adacore.com>

	* od-macho.c (dump_load_command): Handle fvmlib.

2012-01-04  Tristan Gingold  <gingold@adacore.com>

	* od-macho.c: Update copyright year.
	(dump_load_command): Handle BFD_MACH_O_LC_ENCRYPTION_INFO.

For older changes see ChangeLog-2011

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: